Finish up TODOs, add postcss vars for a few things

--- a/src/components/Chat/ChatChannelList.css
+++ b/src/components/Chat/ChatChannelList.css
@@ -27,7 +27,7 @@
         }
 
         &:hover {
-            background-color: color-mix(in srgb, var(--primary), var(--shade2) 50%);
+            background-color: var(--primary-shade2-blend);
             color: var(--colored-background-fg);
         }
 
