--- a/src/components/DismissableNotification/DismissableNotification.css
+++ b/src/components/DismissableNotification/DismissableNotification.css
@@ -15,7 +15,7 @@
  * along with this program.  If not, see <http://www.gnu.org/licenses/>.
  */
 .DismissableNotification {
-    background-color: color-mix(in srgb, var(--info), var(--bg) 70%);
+    background-color: var(--info-bg-blend);
     border-color: var(--info);
     border: 1px solid #000;
     text-align: center;
