--- a/src/components/IncidentReportTracker/IncidentReportList.css
+++ b/src/components/IncidentReportTracker/IncidentReportList.css
@@ -39,7 +39,7 @@
         }
 
         .fa-exclamation-triangle.active {
-            color: color-mix(in srgb, var(--primary), white 30%);
+            color: var(--primary-light);
         }
     }
 
