--- a/src/global_styl/01_variables.css
+++ b/src/global_styl/01_variables.css
@@ -72,7 +72,7 @@
 
 @media (max-height: 500px) {
     :root {
-        --navbar-height: 2.0rem;
+        --navbar-height: 2rem;
         --below-navbar: 2.3rem;
     }
 }
@@ -82,10 +82,10 @@
     /* Build-time variables for color derivation */
     $bg: #fff;
     $fg: #202020;
-    $default-button: #E6E6E0;
-    $primary: #2480FF;
-    $success: #32C738;
-    $info: #C376FE;
+    $default-button: #e6e6e0;
+    $primary: #2480ff;
+    $success: #32c738;
+    $info: #c376fe;
     $colored-background-fg: $bg;
 
     --clear: transparent;
@@ -101,11 +101,11 @@
     --text-color: $fg;
     --text-color-active: #000000;
     --text-dimmed: #868686;
-    --spectator-text-color: #0A06A8;
+    --spectator-text-color: #0a06a8;
     --default-button-color: $fg;
     --toast-bg: $fg;
     --toast-fg: $bg;
-    --link-color: #0068F7;
+    --link-color: #0068f7;
     --link-color-active: #0053c6;
 
     /* Buttons and accents */
@@ -120,34 +120,34 @@
     --primary-dark: darken($primary, 30);
     --primary-bg-blend: #a8c9ff;
     --primary-shade2-blend: #6f9cdc;
-    --danger: #FFA600;
+    --danger: #ffa600;
     --success: $success;
     --success-light: lighten($success, 15);
     --success-dark: darken($success, 15);
     --success-darker: darken($success, 20);
     --info: $info;
     --info-bg-blend: #e5d4fe;
-    --reject: #FF410F;
+    --reject: #ff410f;
     --colored-background-fg: $colored-background-fg;
     --colored-background-fg-dark: darken($colored-background-fg, 10);
 
     /* Chat/special backgrounds */
-    --malkovich-bg: #CCE3D5;
+    --malkovich-bg: #cce3d5;
     --personal-bg: lightblue;
-    --hidden-bg: #D6B1F4;
+    --hidden-bg: #d6b1f4;
     --variation: #0088cc;
     --variation-hover: #005580;
-    --email-banner: #CEDBCF;
-    --chart-area: #E6F6FE;
-    --chart-line: #184A6B;
+    --email-banner: #cedbcf;
+    --chart-area: #e6f6fe;
+    --chart-line: #184a6b;
     --error-boundary-bg: #ffd4c7;
     --error-boundary-fg: #7f2007;
-    --warning-bg: #FFAE2C;
+    --warning-bg: #ffae2c;
     --warning-fg: #202020;
     --supporter-error-bg: hsl(23, 100%, 90%);
     --supporter-error-border: hsl(23, 100%, 80%);
 
-    --help-popup-bg: #2480FF;
+    --help-popup-bg: #2480ff;
 
     /* Online indicators */
     --indicate-online: #6f6;
@@ -156,24 +156,24 @@
     --chat-offline-shadow: -1px -1px 0 #ccc, 1px -1px 0 #ccc, -1px 1px 0 #ccc, 1px 1px 0 #ccc;
 
     /* User type colors */
-    --user: #3070A7;
-    --supporter: #A48200;
-    --aga-official: #B95200;
+    --user: #3070a7;
+    --supporter: #a48200;
+    --aga-official: #b95200;
     --professional: green;
     --bot: #888;
-    --moderator: #9733EE;
-    --admin: #9733EE;
-    --ambassador: #6FCDEA;
-    --teacher: #27AD49;
-    --chat-mentions: #DB397A;
-    --chat-self-message: #0449C4;
-    --chat-system: #1CA760;
+    --moderator: #9733ee;
+    --admin: #9733ee;
+    --ambassador: #6fcdea;
+    --teacher: #27ad49;
+    --chat-mentions: #db397a;
+    --chat-self-message: #0449c4;
+    --chat-system: #1ca760;
     --private-chat-user: #111111;
 
     /* Win/loss colors */
-    --win: #73D355;
-    --tie: #F3F3D5;
-    --loss: #BC4B9A;
+    --win: #73d355;
+    --tie: #f3f3d5;
+    --loss: #bc4b9a;
     --weak-win: #c4edb6;
     --weak-loss: #dec0d5;
     --strong-win: #469e2f;
@@ -193,7 +193,7 @@
     --shade4: #ececec;
     --shade5: #f5f5f5;
 
-    --search-highlight: #FFEA00;
+    --search-highlight: #ffea00;
     --other-player-background: rgba(150, 150, 150, 0.3);
 
     /* Joseki colors */
@@ -206,9 +206,9 @@
     /* React Select */
     --react-select-bg: #fff;
     --react-select-border: #d9d9d9;
-    --react-select-selected-bg: #2684FF;
-    --react-select-selected-fg: #FFFFFF;
-    --react-select-focused-bg: #DEEBFF;
+    --react-select-selected-bg: #2684ff;
+    --react-select-selected-fg: #ffffff;
+    --react-select-focused-bg: #deebff;
     --react-select-focused-fg: #202020;
 
     /* Navbar */
@@ -224,13 +224,13 @@
     /* MiniBoards */
     --goban-shadow: 0 4px 8px rgba(128, 128, 128, 0.71);
     --goban-shadow-borderless: 0 0px 0px rgba(128, 128, 128, 0.71);
-    --miniboard-to-move: #E6FFD8;
+    --miniboard-to-move: #e6ffd8;
     --miniboard-to-move-border: #5c994e;
-    --miniboard-viewed-to-move: #F3F3F3;
+    --miniboard-viewed-to-move: #f3f3f3;
     --miniboard-viewed-to-move-border: #dadada;
-    --miniboard-hover: #C7E7E9;
+    --miniboard-hover: #c7e7e9;
     --miniboard-hover-border: #829fa1;
-    --miniboard-stone-removal: #FBfbD8;
+    --miniboard-stone-removal: #fbfbd8;
     --miniboard-stone-removal-border: #9f9f71;
     --miniboard-stone-removal-hover: #ffffff;
     --miniboard-stone-removal-hover-border: #a5a58c;
@@ -244,8 +244,8 @@
     --player-white-fg: #202020;
     --player-black-clock: #ffffff;
     --player-white-clock: #202020;
-    --player-black-paused-clock: #ABA8AD;
-    --player-white-paused-clock: #928A99;
+    --player-black-paused-clock: #aba8ad;
+    --player-white-paused-clock: #928a99;
     --quickmatch-player-waiting: #25b32e;
     $account-warning-bg: #cab4d6;
     --account-warning-bg: $account-warning-bg;
@@ -281,7 +281,7 @@
     --text-color: $fg;
     --text-color-active: #ffffff;
     --text-dimmed: #8c8c8c;
-    --spectator-text-color: #8987FC;
+    --spectator-text-color: #8987fc;
     --default-button-color: $fg;
     --toast-bg: $fg;
     --toast-fg: $bg;
@@ -316,13 +316,13 @@
     --personal-bg: #0f2e3b;
     --hidden-bg: #300352;
     --variation: #00aaff;
-    --variation-hover: #1A93D0;
-    --email-banner: #2A492B;
-    --chart-area: #092D3E;
-    --chart-line: #329BE0;
+    --variation-hover: #1a93d0;
+    --email-banner: #2a492b;
+    --chart-area: #092d3e;
+    --chart-line: #329be0;
     --error-boundary-bg: #7f2007;
     --error-boundary-fg: #ffd4c7;
-    --warning-bg: #925A00;
+    --warning-bg: #925a00;
     --warning-fg: #bbbbbb;
     --supporter-error-bg: hsl(23, 100%, 10%);
     --supporter-error-border: hsl(23, 100%, 30%);
@@ -338,15 +338,15 @@
     /* User type colors */
     --user: #9dc6ff;
     --supporter: #dfba00;
-    --aga-official: #B95200;
+    --aga-official: #b95200;
     --professional: green;
     --bot: #888;
     --moderator: #b566f2;
     --admin: #b566f2;
-    --ambassador: #6FCDEA;
-    --teacher: #27AD49;
-    --chat-mentions: #E36497;
-    --chat-self-message: #8AB1E6;
+    --ambassador: #6fcdea;
+    --teacher: #27ad49;
+    --chat-mentions: #e36497;
+    --chat-self-message: #8ab1e6;
     --chat-system: #50d98c;
     --private-chat-user: #eeeeee;
 
@@ -373,11 +373,11 @@
     --shade4: #474747;
     --shade5: #3a3a3a;
 
-    --search-highlight: #554E00;
+    --search-highlight: #554e00;
     --other-player-background: rgba(140, 140, 140, 0.2);
 
     /* Joseki colors */
-    --joseki-ideal: #DBAF00;
+    --joseki-ideal: #dbaf00;
     --joseki-good: #436600;
     --joseki-trick: #ffff00;
     --joseki-question: #00ccff;
@@ -386,9 +386,9 @@
     /* React Select */
     --react-select-bg: #474747;
     --react-select-border: #3a3a3a;
-    --react-select-selected-bg: #2684FF;
-    --react-select-selected-fg: #FFFFFF;
-    --react-select-focused-bg: #435B80;
+    --react-select-selected-bg: #2684ff;
+    --react-select-selected-fg: #ffffff;
+    --react-select-focused-bg: #435b80;
     --react-select-focused-fg: #ffffff;
 
     /* Navbar */
@@ -405,13 +405,13 @@
     /* MiniBoards */
     --goban-shadow: none;
     --goban-shadow-borderless: none;
-    --miniboard-to-move: #2B4029;
+    --miniboard-to-move: #2b4029;
     --miniboard-to-move-border: #0f170e;
     --miniboard-viewed-to-move: #282828;
     --miniboard-viewed-to-move-border: #3c3c3c;
     --miniboard-hover: #578588;
     --miniboard-hover-border: #335052;
-    --miniboard-stone-removal: #5B4810;
+    --miniboard-stone-removal: #5b4810;
     --miniboard-stone-removal-border: #251d06;
     --miniboard-stone-removal-hover: #251d06;
     --miniboard-stone-removal-hover-border: #0c0902;
@@ -425,8 +425,8 @@
     --player-white-fg: #131313;
     --player-black-clock: #ffffff;
     --player-white-clock: #000;
-    --player-white-paused-clock: #5F4A71;
-    --player-black-paused-clock: #928A99;
+    --player-white-paused-clock: #5f4a71;
+    --player-black-paused-clock: #928a99;
     --quickmatch-player-waiting: $success;
     $account-warning-bg: #2d2433;
     --account-warning-bg: $account-warning-bg;
@@ -438,155 +438,24 @@
     --select-header-fg: #9a9a9a;
 }
 
-/* Accessible theme (extends dark with accessibility improvements) */
+/* Accessible theme (extends dark with colorblind-friendly overrides) */
 @define-mixin accessible {
-    /* Build-time variables for color derivation */
-    $bg: #1a1a1a;
-    $fg: #bbbbbb;
-    $default-button: #474747;
-    $primary: #1d66cc;
-    $success: #289f2d;
-    $info: #9c5fcc;
-    $colored-background-fg: #eeeeee;
+    @mixin dark;
 
-    /* Start with dark theme values */
-    --clear: transparent;
-    --bg: $bg;
-    --fg: $fg;
-    --fg-light: lighten($fg, 30);
-    --fg-increased-contrast: #ffffff;
-    --mix-base: #777;
-    --background-color: $bg;
-    --card-background-color: #2a2a2a;
-    --text-color: $fg;
-    --text-color-active: #ffffff;
-    --text-dimmed: #8c8c8c;
-    --spectator-text-color: #8987FC;
-    --default-button-color: $fg;
-    --toast-bg: $fg;
-    --toast-fg: $bg;
-    --link-color: #539bff;
-    --link-color-active: #427ccc;
-    --default-button: $default-button;
-    --default-button-light: lighten($default-button, 15);
-    --default-button-dark: darken($default-button, 10);
-    --default-button-darker: darken($default-button, 20);
-    --default-button-disabled: #525252;
-    --primary: $primary;
-    --primary-light: lighten($primary, 30);
-    --primary-light-20: lighten($primary, 20);
-    --primary-dark: darken($primary, 30);
-    --primary-bg-blend: #2a3d52;
-    --primary-shade2-blend: #456999;
-    --danger: #cc8500;
-    --success: $success;
-    --success-light: lighten($success, 15);
-    --success-dark: darken($success, 15);
-    --success-darker: darken($success, 20);
-    --info: $info;
-    --info-bg-blend: #3d2d52;
-    --reject: #a62705;
-    --colored-background-fg: $colored-background-fg;
-    --colored-background-fg-dark: darken($colored-background-fg, 10);
-    --malkovich-bg: #597053;
-    --personal-bg: #0f2e3b;
-    --hidden-bg: #300352;
-    --variation: #00aaff;
-    --variation-hover: #1A93D0;
-    --email-banner: #2A492B;
-    --chart-area: #092D3E;
-    --chart-line: #329BE0;
-    --error-boundary-bg: #7f2007;
-    --error-boundary-fg: #ffd4c7;
-    --warning-bg: #925A00;
-    --warning-fg: $fg;
-    --supporter-error-bg: hsl(23, 100%, 10%);
-    --supporter-error-border: hsl(23, 100%, 30%);
-    --help-popup-bg: $primary;
-    --chat-offline: #1a1a1a;
-    --chat-offline-shadow: -1px -1px 0 #ccc, 1px -1px 0 #ccc, -1px 1px 0 #ddd, 1px 1px 0 #ccc;
-    --user: #9dc6ff;
-    --supporter: #dfba00;
-    --aga-official: #B95200;
-    --professional: green;
-    --bot: #888;
-    --moderator: #b566f2;
-    --admin: #b566f2;
-    --ambassador: #6FCDEA;
-    --teacher: #27AD49;
-    --chat-mentions: #E36497;
-    --chat-self-message: #8AB1E6;
-    --chat-system: #50d98c;
-    --private-chat-user: $colored-background-fg;
-    --weak-w-text: $fg;
-    --weak-l-text: $fg;
-    --winner-trophy: #e6b500;
-    --annul-opacity: 0.3;
-    --shade0: #c4c4c4;
-    --shade1: #9a9a9a;
-    --shade2: #6d6d6d;
-    --shade3: #545454;
-    --shade4: $default-button;
-    --shade5: #3a3a3a;
-    --search-highlight: #554E00;
-    --other-player-background: rgba(140, 140, 140, 0.2);
-    --joseki-ideal: #DBAF00;
-    --joseki-good: #436600;
-    --joseki-trick: #ffff00;
-    --joseki-question: #00ccff;
-    --joseki-mistake: #b3001e;
-    --react-select-bg: $default-button;
-    --react-select-border: #3a3a3a;
-    --react-select-selected-bg: #2684FF;
-    --react-select-selected-fg: #FFFFFF;
-    --react-select-focused-bg: #435B80;
-    --react-select-focused-fg: #ffffff;
-    --navbar-highlight-background-color: #333;
-    --navbar-background-color: #262626;
-    --logo-svg: url("../../assets/ogs_dark.svg");
-    $input-color: #5e5e5e;
-    --input-bg: $input-color;
-    --input-border: $input-color;
-    --input-fg: $fg;
-    --goban-shadow: none;
-    --goban-shadow-borderless: none;
-    --miniboard-to-move: #2B4029;
-    --miniboard-to-move-border: #0f170e;
-    --miniboard-viewed-to-move: #282828;
-    --miniboard-viewed-to-move-border: #3c3c3c;
-    --miniboard-hover: #578588;
-    --miniboard-hover-border: #335052;
-    --miniboard-stone-removal: #5B4810;
-    --miniboard-stone-removal-border: #251d06;
-    --miniboard-stone-removal-hover: #251d06;
-    --miniboard-stone-removal-hover-border: #0c0902;
-    --player-black-background: linear-gradient(to bottom, #7d7d7d 0%, #333333 50%, #0c0c0c 100%);
-    --player-white-background: linear-gradient(to bottom, #888888 0%, #efefef 50%, #efefef 100%);
-    --inactive-support-gradient: linear-gradient(to bottom, #7d7d7d 0%, #333333 100%);
-    --active-support-gradient: linear-gradient(to bottom, #9c8200 0%, #584a00 100%);
-    --player-black-fg: $fg;
-    --player-white-fg: #131313;
-    --player-black-clock: #ffffff;
-    --player-white-clock: #000;
-    --player-white-paused-clock: #5F4A71;
-    --player-black-paused-clock: #928A99;
-    $account-warning-bg: #2d2433;
-    --account-warning-bg: $account-warning-bg;
-    --account-warning-bg-light: lighten($account-warning-bg, 20);
-    --account-warning-fg: $fg;
-    --select-header-bg: $default-button;
-    --select-header-fg: #9a9a9a;
-
-    /* Accessible-specific overrides (colorblind-friendly palette) */
-    --win: #0072B2;
-    --tie: #CC79A7;
-    --loss: #D55E00;
-    --strong-win: #0072B2;
-    --strong-loss: #D55E00;
+    /* Colorblind-friendly win/loss palette */
+    --win: #0072b2;
+    --tie: #cc79a7;
+    --loss: #d55e00;
+    --strong-win: #0072b2;
+    --strong-loss: #d55e00;
     --weak-win: #003f64;
     --weak-loss: #783400;
-    --strong-w-text: $bg;
-    --strong-l-text: $bg;
+    --strong-w-text: #1a1a1a;
+    --strong-l-text: #1a1a1a;
+
+    /* Accessible online indicators */
+    --chat-offline: #1a1a1a;
+    --chat-offline-shadow: -1px -1px 0 #ccc, 1px -1px 0 #ccc, -1px 1px 0 #ddd, 1px 1px 0 #ccc;
     --indicate-online: #70b3ff;
     --indicate-online-shadow: -1px -1px 0 #000, 1px -1px 0 #111, -1px 1px 0 #222, 1px 1px 0 #111;
     --quickmatch-player-waiting: #70b3ff;
