--- a/src/components/TurnIndicator/TurnIndicator.css
+++ b/src/components/TurnIndicator/TurnIndicator.css
@@ -27,7 +27,7 @@
     }
 }
 
-body.light .TurnIndicator {
+[data-theme="light"] .TurnIndicator {
     .count {
         background-color: #101010;
         color: #fff;
@@ -38,7 +38,7 @@ body.light .TurnIndicator {
     }
 }
 
-body.dark .TurnIndicator {
+[data-theme="dark"] .TurnIndicator {
     .count {
         background-color: #bbb;
         color: #252525;
@@ -49,7 +49,7 @@ body.dark .TurnIndicator {
     }
 }
 
-body.accessible .TurnIndicator {
+[data-theme="accessible"] .TurnIndicator {
     .count {
         background-color: #bbb;
         color: #252525;
