--- a/src/views/Overview/Overview.css
+++ b/src/views/Overview/Overview.css
@@ -29,7 +29,7 @@
     flex-wrap: wrap;
     justify-content: center;
 
-    h3 >i {
+    h3 > i {
         margin-right: 1rem;
     }
 
@@ -158,12 +158,19 @@
         overflow-y: auto;
     }
 
-    .Overview-TournamentList, .Overview-LadderList, .Overview-GroupList {
-        a, .clickable, .fakelink {
+    .Overview-TournamentList,
+    .Overview-LadderList,
+    .Overview-GroupList {
+        a,
+        .clickable,
+        .fakelink {
             color: var(--text-color);
         }
 
-        a:active, a:hover, .clickable:hover, .fakelink:hover {
+        a:active,
+        a:hover,
+        .clickable:hover,
+        .fakelink:hover {
             color: var(--text-color-active);
         }
     }
