--- a/src/views/Game/GameChat.css
+++ b/src/views/Game/GameChat.css
@@ -14,6 +14,9 @@
  * You should have received a copy of the GNU Affero General Public License
  * along with this program.  If not, see <http://www.gnu.org/licenses/>.
  */
+
+@import "../../global_styl/mixins.css";
+
 .GameChat {
     display: flex;
     flex-direction: column;
@@ -90,7 +93,7 @@
     }
 
     .timestamp {
-        /* @extends .monospace - apply manually */
+        @mixin monospace;
         font-size: 10pt;
         color: var(--fg);
     }
@@ -204,13 +207,13 @@
     }
 
     .move-number {
-        /* @extends .monospace - apply manually */
+        @mixin monospace;
         font-size: var(--font-size-smaller);
         cursor: pointer;
     }
 
     .date {
-        /* @extends .monospace - apply manually */
+        @mixin monospace;
         font-size: var(--font-size-smaller);
     }
 
