--- a/src/components/Chat/ChatChannelList.css
+++ b/src/components/Chat/ChatChannelList.css
@@ -14,6 +14,9 @@
  * You should have received a copy of the GNU Affero General Public License
  * along with this program.  If not, see <http://www.gnu.org/licenses/>.
  */
+
+@import "../../global_styl/mixins.css";
+
 .ChatChannelList {
     .channel {
         padding-left: 0.2rem;
@@ -76,7 +79,7 @@
 
             .unread-count {
                 flex-shrink: 0;
-                /* @extends .monospace - apply manually */
+                @mixin monospace;
                 font-size: 0.8rem;
                 font-style: normal !important;
                 float: right;
