--- a/src/views/Play/QuickMatch.css
+++ b/src/views/Play/QuickMatch.css
@@ -388,7 +388,7 @@
         right: 0;
         width: 20rem;
         max-width: 90vw;
-        z-index: var(--z-play-buttons) + 1;
+        z-index: calc(var(--z-play-buttons) + 1);
 
         .ogs-react-select__group-heading {
             text-transform: none;
