Fix old canvas rendering

--- a/src/ogs.css
+++ b/src/ogs.css
@@ -17,9 +17,8 @@
 
 /* Global imports - third-party libraries and global styles */
 @import-glob "../node_modules/sweetalert2/dist/sweetalert2.css";
-@import-glob "../submodules/react-dynamic-help/src/DynamicHelp.css";
-@import-glob "../submodules/moderator-ui/**/*.css";
 @import-glob "./global_styl/*.css";
+@import-glob "../submodules/**/[A-Z]*.css";
 @import-glob "./lib/*.css";
 
 /* Component CSS - exclude Sortable which only has CSS modules (handled by Vite) */
